# vcpkg_helloworld_manifest

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  readme.md  vcpkg.json
cmake/vcpkg_triplets/: x64-windows-mixed.cmake
